# imagegrains

./: .gitignore  0_train_cellpose_model.ipynb  1_image_segmentation.ipynb  1_train_cellpose_model.ipynb  3_gsd_uncertainty.ipynb  CPHelper.py  GSDUncertainty.py  GrainSizing.py  LICENSE.md  Readme.md  __init__.py  data_loader.py  dataset_object_size.csv  grainsizing.py  gsd_uncertainty.py  helper.py  imagegrains.py  plotting.py  pyproject.toml  segmentation_helper.py  tSNE.ipynb
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml  hatch_dummy.yml  publish_pypi.yml  pypi-publish.yml
demo_data/: FH_resolutions.csv  K1_field_measurement.csv  OM_err.csv  SI_err.csv
demo_data/FH/test/: 4_P1060348_3_mask.tif
demo_data/FH/train/: 2_P1060338_0_mask.tif  3_P1060343_3_mask.tif  7_P1060359_3_mask.tif
demo_data/train/: 1_P1060330_1_mask.tif  5_P1060351_2_mask.tif  6_P1060355_0_mask.tif
notebooks/: 1_train_cellpose_model.ipynb  3_gsd_analysis.ipynb  4_gsd_analysis.ipynb  4_gsd_uncertainty.ipynb  4_train_cellpose_model.ipynb  clustering_tSNE.ipynb  combine_two_scales.ipynb  complete_imagegrains_analysis.ipynb  res_tSNE.pkl  tSNE.ipynb
src/imagegrains/: __init__.py  __main__.py  data_loader.py  grainsizing.py  gsd_uncertainty.py  imagegrains.py  plotting.py  segmentation_helper.py
