# https://peps.python.org/pep-0517/
[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# https://peps.python.org/pep-0621/
[project]
name = "imagegrains"
description = "A software library for segmenting and measuring of sedimentary particles in images"
readme = "Readme.md"
requires-python = ">=3.8"
license = { text = "BSD 3-Clause License" }
authors = [
    { email = "david.mair1@gmx.at", name = "David Mair, Guillaume Witz" },
]
dynamic = ["version"]
dependencies = [
    "cellpose",
    "matplotlib",
    "scikit-image",
    "pandas",
    "scanpy",
    "jupyterlab"
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.metadata.hooks.vcs.urls]
Homepage = "https://github.com/dmair1989/imagegrains"
source_archive = "https://github.com/dmair1989/imagegrains/archive/{commit_hash}.zip"

# extras
# https://peps.python.org/pep-0621/#dependencies-optional-dependencies
[project.optional-dependencies]
test = ["pytest>=6.0"]
gui = ["cellpose[gui]"]



[project.urls]
homepage = "https://github.com/dmair1989/imagegrains"
repository = "https://github.com/dmair1989/imagegrains"
