# https://peps.python.org/pep-0517/
[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# https://peps.python.org/pep-0621/
[project]
name = "imagegrains"
description = "A software library for segmenting and measuring of sedimentary particles in images"
readme = "Readme.md"
requires-python = ">=3.8"
license = { text = "BSD 3-Clause License" }
authors = [
    { email = "david.mair@unibe.ch", name = "David Mair, Guillaume Witz" },
]
dynamic = ["version"]
dependencies = [
    "imagecodecs == 2023.9.18",
    "cellpose == 2.3.2",
    "matplotlib >= 3.6.0, < 3.7.2",
    "scikit-image >= 0.20.0",
    "pandas >= 2.0.0",
    "scanpy >= 1.9.0",
    "jupyterlab >= 4.0.0",
    "opentsne",
    "leidenalg"
]

[tool.hatch.version]
source = "vcs"

# extras
# https://peps.python.org/pep-0621/#dependencies-optional-dependencies
[project.optional-dependencies]
test = ["pytest>=6.0"]
gui = ["cellpose[gui]"]

[project.urls]
homepage = "https://github.com/dmair1989/imagegrains"
repository = "https://github.com/dmair1989/imagegrains"
